# edgerunner

./: .env.example  Cargo.toml  Dockerfile  README.md  brand.md  codex-session.jsonl  config.example.toml
crates/edgerunner-adapters/: Cargo.toml
crates/edgerunner-adapters/src/: lib.rs  pascal.rs  txline.rs
crates/edgerunner-core/: Cargo.toml
crates/edgerunner-core/src/: engine.rs  fixed.rs  journal.rs  lib.rs  paper.rs  replay.rs  risk.rs  strategy.rs  types.rs
crates/edgerunner-service/: Cargo.toml
crates/edgerunner-service/src/: config.rs  main.rs  mapping.rs  server.rs  simulation.rs
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEMO.md  GETTING_STARTED.md  README.md  REPLAY.md  STRATEGY.md
web/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
web/data/runs/: latest.jsonl
web/src/: App.tsx  styles.css  types.ts
